[gd_scene load_steps=56 format=2]

[ext_resource path="res://Player/Pixel_GU.png" type="Texture" id=1]
[ext_resource path="res://Player/gu.gd" type="Script" id=2]
[ext_resource path="res://SFX/Footstep__009.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX/Hits/melee sound.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/Hits/animal melee sound.wav" type="AudioStream" id=5]
[ext_resource path="res://SFX/Hits/qubodup-BangShort.ogg" type="AudioStream" id=6]
[ext_resource path="res://SFX/Footstep__007.wav" type="AudioStream" id=7]
[ext_resource path="res://Fonts/I-pixel-u.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Images/key_empty.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.8309
height = 0.0

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AtkHitBox/AtkHitBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AtkHitBox/AtkHitBox:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 22.75, 8.28384 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../AtkHitBox/AtkHitBox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 45.5273, -24.686 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:is_controlable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../AudioStreamPlayer2D:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("../AudioStreamPlayer2D")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AtkHitBox/AtkHitBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AtkHitBox/AtkHitBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 45.5273, -24.4632 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../AtkHitBox/AtkHitBox:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 22.75, 8.28384 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:is_controlable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../AudioStreamPlayer2D:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.31951 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("../AudioStreamPlayer2D")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AtkHitBox/AtkHitBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AtkHitBox/AtkHitBox:shape:extents")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 35.3497, 8.28384 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../AtkHitBox/AtkHitBox:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 47.4553, -8.28462 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("..:is_controlable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../AudioStreamPlayer2D:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 9.84916 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("../AudioStreamPlayer2D")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Climb"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 17 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../AudioStreamPlayer2D:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.18921 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "Climb_idle"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Die"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 0, 3 ]
}

[sub_resource type="Animation" id=11]
resource_name = "FadeIn"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0, 0.3, 0.6 )
}

[sub_resource type="Animation" id=12]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:knockback_force")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 400, 0 ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 35.3497, 8.28384 )

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Atk01"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Atk02"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Atk03"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Climb"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Climb_idle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Die"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachine" id=41]
states/Atk01/node = SubResource( 15 )
states/Atk01/position = Vector2( 640, 125 )
states/Atk02/node = SubResource( 16 )
states/Atk02/position = Vector2( 640, 252 )
states/Atk03/node = SubResource( 17 )
states/Atk03/position = Vector2( 640, 375 )
states/Climb/node = SubResource( 18 )
states/Climb/position = Vector2( -92, 160 )
states/Climb_idle/node = SubResource( 19 )
states/Climb_idle/position = Vector2( -92, 285 )
states/Die/node = SubResource( 20 )
states/Die/position = Vector2( 182, 285 )
states/Idle/node = SubResource( 21 )
states/Idle/position = Vector2( 182, 160 )
states/Jump/node = SubResource( 22 )
states/Jump/position = Vector2( 182, -3 )
states/Walk/node = SubResource( 23 )
states/Walk/position = Vector2( 420, -3 )
transitions = [ "Idle", "Walk", SubResource( 24 ), "Walk", "Idle", SubResource( 25 ), "Idle", "Atk01", SubResource( 26 ), "Atk01", "Idle", SubResource( 27 ), "Atk02", "Idle", SubResource( 28 ), "Atk03", "Idle", SubResource( 29 ), "Walk", "Jump", SubResource( 30 ), "Jump", "Walk", SubResource( 31 ), "Idle", "Jump", SubResource( 32 ), "Jump", "Idle", SubResource( 33 ), "Idle", "Climb", SubResource( 34 ), "Climb", "Idle", SubResource( 35 ), "Idle", "Die", SubResource( 36 ), "Idle", "Atk02", SubResource( 37 ), "Idle", "Atk03", SubResource( 38 ), "Climb", "Climb_idle", SubResource( 39 ), "Climb_idle", "Climb", SubResource( 40 ) ]
start_node = "Idle"
graph_offset = Vector2( -248.912, -41.2706 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=42]

[sub_resource type="RectangleShape2D" id=43]
extents = Vector2( 4.76854, 10 )

[sub_resource type="DynamicFont" id=44]
size = 8
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=45]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_E:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ) ]
}

[sub_resource type="RectangleShape2D" id=46]
extents = Vector2( 24.5292, 24.773 )

[node name="Gu" type="KinematicBody2D"]
collision_mask = 34
script = ExtResource( 2 )
atk_sta = 0

[node name="Hitbox" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.741176, 1, 1 )
position = Vector2( 0, -24.4632 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
offset = Vector2( 0, -8 )
hframes = 5
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Atk01 = SubResource( 2 )
anims/Atk02 = SubResource( 3 )
anims/Atk03 = SubResource( 4 )
anims/Climb = SubResource( 5 )
anims/Climb_idle = SubResource( 6 )
anims/Die = SubResource( 7 )
anims/Idle = SubResource( 8 )
anims/Jump = SubResource( 9 )
anims/Walk = SubResource( 10 )

[node name="EfxAnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/FadeIn = SubResource( 11 )
anims/FadeOut = SubResource( 12 )
anims/Hurt = SubResource( 13 )

[node name="AtkTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.7
one_shot = true

[node name="AtkHitBox" type="Area2D" parent="."]
monitorable = false
collision_mask = 4

[node name="AtkHitBox" type="CollisionShape2D" parent="AtkHitBox"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 47.4553, -8.28462 )
shape = SubResource( 14 )
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 41 )
anim_player = NodePath("../Sprite/AnimationPlayer")
active = true
parameters/playback = SubResource( 42 )

[node name="LadderChecker" type="Area2D" parent="."]
monitorable = false
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadderChecker"]
modulate = Color( 1, 0.937255, 0, 1 )
position = Vector2( 0, -10.0592 )
shape = SubResource( 43 )

[node name="PlatformChecker" type="RayCast2D" parent="."]
position = Vector2( 0, -2 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 48

[node name="PlatformChecker_up" type="RayCast2D" parent="."]
position = Vector2( 0, -10 )
enabled = true
cast_to = Vector2( 0, -16 )
collision_mask = 16
collide_with_areas = true
collide_with_bodies = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -2.0

[node name="E_KEY" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -86 )

[node name="Sprite_E" type="Sprite" parent="E_KEY"]
position = Vector2( 0, -3.89445 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="E_KEY/Sprite_E"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -2.67572
margin_top = -8.0
margin_right = 37.3243
margin_bottom = 6.0
custom_fonts/font = SubResource( 44 )
text = "E"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="E_KEY"]
autoplay = "default"
anims/default = SubResource( 45 )

[node name="HelpChecker" type="Area2D" parent="E_KEY"]
position = Vector2( 0, 61.5368 )
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="E_KEY/HelpChecker"]
shape = SubResource( 46 )

[connection signal="body_entered" from="AtkHitBox" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="LadderChecker" to="." method="_on_LadderChecker_area_entered"]
[connection signal="area_exited" from="LadderChecker" to="." method="_on_LadderChecker_area_exited"]
